--- a/src/heroku.css
+++ b/src/heroku.css
@@ -6,7 +6,6 @@ body {
     margin: auto;
     color:white;
     text-shadow: 4px 4px #455947;
-    font-size: 5em;
   }
 
   #main-container {
@@ -32,11 +31,8 @@ body {
     font-size: 15px;
   }
 
-  #character-container {
-    text-align: center;
+  .character-container {
     padding-top: 50px;
-     margin-left: auto;
-     margin-right: auto;
   }
 
 
@@ -48,7 +44,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 2.25em;
+    font-size: 200px;
     padding: 0px;
     height: 250px;
     width: 100vw;
