--- a/src/heroku.css
+++ b/src/heroku.css
@@ -21,7 +21,7 @@ body {
      width: 300px;
      height:auto;
      background-color: rgb(221, 247, 255);
-     margin-top: 30px;
+     margin-top: 10px;
   }
 
   #small-card {
@@ -33,7 +33,7 @@ body {
      width: 225px;
      height:auto;
      background-color: rgb(221, 247, 255);
-     margin-top: 30px;
+     margin-top: 10px;
   }
 
   #button-card img {
@@ -45,11 +45,12 @@ body {
   }
 
   .character-container {
-    padding-top: 20px;
+    padding-top: 5px;
   }
 
   #button-card {
     display: inline-table;
+    margin-bottom: 20px;
   }
 
 
@@ -63,7 +64,7 @@ body {
     align-items: center;
     font-size: 100px;
     padding: 0px;
-    height: 250px;
+    height: 150px;
     width: 100vw;
   }
   table {
@@ -104,7 +105,12 @@ body {
   #Nav-Bar button {
     width: 150px;
     height: 60px;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-right:5px;
   }
+
+
 
 .dropdown {
   position:relative;
