--- a/src/heroku.css
+++ b/src/heroku.css
@@ -1,121 +1,124 @@
 body {
-    font-family: 'Shadows Into Light Two', cursive;
-    background-color: lightyellow;
-  }
-  h1 {
-    font-family: 'Amatic SC', cursive;
-    margin: auto;
-    color:white;
-    text-shadow: 4px 4px #455947;
-  }
+  font-family: "Shadows Into Light Two", cursive;
+  background-color: lightyellow;
+}
+#about {
+  margin: auto;
+  width: 50%;
+  border: 3px solid lightblue;
+  padding: 10px;
+}
+h1 {
+  font-family: "Amatic SC", cursive;
+  margin: auto;
+  color: white;
+  text-shadow: 4px 4px #455947;
+}
 
-  #main-container {
-    background-color: lightyellow;
-  }
+#main-container {
+  background-color: lightyellow;
+}
 
-  #big-card {
-    text-align:center;
-     display:inline-block;
-     border: black solid 2px;
-     padding: 20px;
-     margin:10px;
-     width: 300px;
-     height:auto;
-     background-color: rgb(221, 247, 255);
-     margin-top: 10px;
-  }
+#big-card {
+  text-align: center;
+  display: inline-block;
+  border: black solid 2px;
+  padding: 20px;
+  margin: 10px;
+  width: 300px;
+  height: auto;
+  background-color: rgb(221, 247, 255);
+  margin-top: 10px;
+}
 
-  #small-card {
-    text-align:center;
-     display:inline-block;
-     border: black solid 2px;
-     padding: 20px;
-     margin:10px;
-     width: 225px;
-     height:auto;
-     background-color: rgb(221, 247, 255);
-     margin-top: 10px;
-  }
+#small-card {
+  text-align: center;
+  display: inline-block;
+  border: black solid 2px;
+  padding: 20px;
+  margin: 10px;
+  width: 225px;
+  height: auto;
+  background-color: rgb(221, 247, 255);
+  margin-top: 10px;
+}
 
-  #button-card img {
-    height:100px;
-  }
+#button-card img {
+  height: 100px;
+}
 
-  #button-card h3 {
-    font-size: 15px;
-  }
+#button-card h3 {
+  font-size: 15px;
+}
 
-  .character-container {
-    padding-top: 5px;
-  }
+.character-container {
+  padding-top: 5px;
+}
 
-  #button-card {
-    display: inline-table;
-    margin-bottom: 20px;
-  }
+#button-card {
+  display: inline-table;
+  margin-bottom: 20px;
+}
 
+#header {
+  background-image: url("https://raw.githubusercontent.com/paigeegorry/last-airbender-api/master/lib/Public/assets/background.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  opacity: 0.8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 100px;
+  padding: 0px;
+  height: 150px;
+  width: 100vw;
+}
+table {
+  padding: 50px;
+  margin: 0 auto;
+  margin-top: 20px;
+  font-family: "Amatic SC", cursive;
+  font-size: 1.5em;
+  width: 90vw;
+}
+th {
+  text-transform: uppercase;
+  font-size: 1.75em;
+  text-shadow: 0.5px 0.5px black;
+}
+tr:nth-child(odd) {
+  background: lightgray;
+}
+tr {
+  padding: 10px;
+}
+td {
+  font-size: 1.5em;
+  padding: 5px;
+  margin: 8px;
+  text-align: right;
+}
+footer {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 20px;
+  font-size: 1.75em;
+  text-align: center;
+  border-top: 1px solid lightgray;
+  padding-top: 10px;
+}
 
-  #header {
-    background-image: url('https://raw.githubusercontent.com/paigeegorry/last-airbender-api/master/lib/Public/assets/background.jpg');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    opacity: .8;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 100px;
-    padding: 0px;
-    height: 150px;
-    width: 100vw;
-  }
-  table {
-    padding: 50px;
-    margin: 0 auto;
-    margin-top: 20px;
-    font-family: 'Amatic SC', cursive;
-    font-size: 1.5em;
-    width: 90vw;
-  }
-  th {
-    text-transform: uppercase;
-    font-size: 1.75em;
-    text-shadow: .5px .5px black;
-  }
-  tr:nth-child(odd) {
-    background: lightgray
-  }
-  tr {
-    padding: 10px;
-  }
-  td {
-    font-size: 1.5em;
-    padding: 5px;
-    margin: 8px;
-    text-align: right;
-  }
-  footer {
-    width: 50%;
-    margin: 0 auto;
-    margin-top: 20px;
-    font-size: 1.75em;
-    text-align: center;
-    border-top: 1px solid lightgray;
-    padding-top: 10px;
-  }
-
-  #Nav-Bar button {
-    width: 150px;
-    height: 60px;
-    margin-top: 15px;
-    margin-left: 5px;
-    margin-right:5px;
-  }
-
-
+#Nav-Bar button {
+  width: 150px;
+  height: 60px;
+  margin-top: 15px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
 
 .dropdown {
-  position:relative;
-  display:inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-content {
@@ -133,7 +136,7 @@ body {
 }
 
 .inner-content {
-  display:none;
+  display: none;
   position: absolute;
 }
 
@@ -149,48 +152,51 @@ body {
   display: block;
   background-color: white;
   border: black solid 1px;
-  width:137.5px;
+  width: 137.5px;
 }
 
-.filter-btns button{
-  width:auto;
-  height:30px;
-  min-width:100px;
-  margin:2.5px;
+.filter-btns button {
+  width: auto;
+  height: 30px;
+  min-width: 100px;
+  margin: 2.5px;
 }
 
 .inner-a {
   display: block;
   background-color: white;
   border: black solid 1px;
-  width:137.5px;
+  width: 137.5px;
 }
 
-  nav {
-    display: flex;
-    justify-content: space-around;
-  }
-  p {
-    margin: 0;
-    padding: 0;
-  }
-  a {
-    margin-top: 0px;
-    text-decoration: none;
-    color: black;
-    padding: 5px;
-  }
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+p {
+  margin: 0;
+  padding: 0;
+}
+a {
+  margin-top: 0px;
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+}
 
-  h6 {
-    margin: 0;
-    font-size: 0.75em;
-  }
-  .example-link {
-    font-size: 1.25rem;
-    position: absolute; top: 0; right: 0; text-align:right;
-    padding: 5px;
-  }
-  .route {
-    position: relative;
-    text-align: left;
-  }
+h6 {
+  margin: 0;
+  font-size: 0.75em;
+}
+.example-link {
+  font-size: 1.25rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+  padding: 5px;
+}
+.route {
+  position: relative;
+  text-align: left;
+}
